src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnexpectedTranslationKey1/InvalidUnexpectedTranslationKey1.php
<?php

namespace Invalid\UnexpectedTranslationKey1;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedTranslationKey1 extends ClarolineExtension
{
    public function getNameTranslationKey()
    {
        return array();
    }
}